// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Lift nested lists > Does not merge <li> nodes separated by non-whitespace text 1`] = `"<ul><li>a</li></ul>text<ul><li>b</li></ul>"`;

exports[`Lift nested lists > Leaves <li>s already inside a <ul> alone 1`] = `"<ul><li>existing</li></ul><ul><li>orphan</li></ul>"`;

exports[`Lift nested lists > Lifts multiple bullet lists 1`] = `
"<ul>
    <div><li>
       Bullet List Item 1
       </li><div data-node-type="blockGroup"><ul>
          <li>
             Nested Bullet List Item 1
          </li>
          <li>
             Nested Bullet List Item 2
          </li>
       </ul><ul>
          <li>
             Nested Bullet List Item 3
          </li>
          <li>
             Nested Bullet List Item 4
          </li>
       </ul></div></div>
    <li>
    Bullet List Item 2
    </li>
 </ul>"
`;

exports[`Lift nested lists > Lifts multiple bullet lists with content in between 1`] = `
"<ul>
    <div><li>
       Bullet List Item 1
       </li><div data-node-type="blockGroup"><ul>
          <li>
             Nested Bullet List Item 1
          </li>
          <li>
             Nested Bullet List Item 2
          </li>
       </ul></div></div><div><li>
       In between content
       </li><div data-node-type="blockGroup"><ul>
          <li>
             Nested Bullet List Item 3
          </li>
          <li>
             Nested Bullet List Item 4
          </li>
       </ul></div></div>
    <li>
    Bullet List Item 2
    </li>
 </ul>"
`;

exports[`Lift nested lists > Lifts nested bullet lists 1`] = `
"<ul>
    <div><li>
       Bullet List Item 1
       </li><div data-node-type="blockGroup"><ul>
          <li>
             Nested Bullet List Item 1
          </li>
          <li>
             Nested Bullet List Item 2
          </li>
       </ul></div></div>
    <li>
    Bullet List Item 2
    </li>
 </ul>"
`;

exports[`Lift nested lists > Lifts nested bullet lists with content after nested list 1`] = `
"<ul>
    <div><li>
       Bullet List Item 1
       </li><div data-node-type="blockGroup"><ul>
          <li>
             Nested Bullet List Item 1
          </li>
          <li>
             Nested Bullet List Item 2
          </li>
       </ul></div></div><li>
       More content in list item 1
    </li>
    <li>
    Bullet List Item 2
    </li>
 </ul>"
`;

exports[`Lift nested lists > Lifts nested bullet lists without li 1`] = `
"<ul>
       Bullet List Item 1
       <ul>
          <li>
             Nested Bullet List Item 1
          </li>
          <li>
             Nested Bullet List Item 2
          </li>
       </ul>
    <li>
    Bullet List Item 2
    </li>
 </ul>"
`;

exports[`Lift nested lists > Lifts nested mixed lists 1`] = `
"<ol>
    <div><li>
       Numbered List Item 1
       </li><div data-node-type="blockGroup"><ul>
          <li>
             Bullet List Item 1
          </li>
          <li>
          Bullet List Item 2
          </li>
       </ul></div></div>
    <li>
       Numbered List Item 2
    </li>
 </ol>"
`;

exports[`Lift nested lists > Lifts nested numbered lists 1`] = `
"<ol>
    <div><li>
       Numbered List Item 1
       </li><div data-node-type="blockGroup"><ol>
          <li>
             Nested Numbered List Item 1
          </li>
          <li>
             Nested Numbered List Item 2
          </li>
       </ol></div></div>
    <li>
       Numbered List Item 2
    </li>
 </ol>"
`;

exports[`Lift nested lists > Wraps a single bare <li> in a <ul> 1`] = `"<ul><li>only</li></ul>"`;

exports[`Lift nested lists > Wraps bare <li>s mixed with other top-level content 1`] = `"<p>before</p><ul><li>x</li><li>y</li></ul><p>after</p>"`;

exports[`Lift nested lists > Wraps consecutive bare <li> elements in a <ul> 1`] = `"<ul><li>a</li><li>b</li></ul>"`;

exports[`Lift nested lists > Wraps nested orphan <li>s as inner lists 1`] = `"<ul><li>outer</li><li>inner</li></ul>"`;
